<resources>
    <string name="app_name">Calorie Calculator</string>
    <string name="male">Male</string>
    <string name="female">FEMALE</string>
    <string name="calorie">Calorie</string>
    <string name="enter_age">Enter Age</string>
    <string name="calories_calculator">Calories Calculator</string>
    <string name="enter_weight_kg">Enter weight (kg)</string>
    <string name="calories_required_per_day">calories required per day</string>
    <string name="reset">RESET</string>
    <string name="calculate">Calculate</string>
    <string name="all_fields_are_required">All Fields are Required</string>
    <string name="very_intense_exercise_daily">Very intense exercise daily</string>
    <string name="intense_exercise_6_7_times_week">Intense exercise 6-7 times/week</string>
    <string name="intense_exercise_3_4_times_week">Intense exercise 3-4 times/week</string>
    <string name="exercise_4_5_times_week">Exercise 4-5 times/week</string>
    <string name="exercise_1_3_times_week">Exercise 1-3 times/week</string>
    <string name="sedentary_little_or_no_exercise">Sedentary: little or no exercise</string>
    <string name="calories">Calories</string>
    <string name="calories_calculator1">CALORIES CALCULATOR</string>
    <string name="enter_height_cm">Enter Height (cm)</string>
    <string name="activity_level">Activity Level</string>
</resources>